[package]
name = "rustroneer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.3"
bevy-inspector-egui-rapier = "0.9.0"
bevy_egui = "0.25.0"
bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d", "parallel"]}
delaunator = "1.0.2"
glam = "0.25.0"
image = "0.24.9"
imageproc = "0.23.0"
marching-squares = "0.1.1"
noise = "0.8"
num-traits = "0.2.18"
petgraph = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.1"
uuid = "1.7.0"

planet = {path = "../planet"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
