[package]
name = "rustroneer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
anyhow = "1.0.80"
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.3"
bevy-inspector-egui-rapier = "0.9.0"
bevy_egui = "0.25.0"
bevy_rapier2d = {version = "0.25.0", features = ["simd-stable", "debug-render-2d", "parallel"]}
image = "0.24.9"
planet = {path = "../planet"}
bevy_tweening = "0.10.0"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.33"
dotenv = "0.15.0"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

